chore: relicense from BSL-1.1 to dual MIT/Apache-2.0 (#144)
* chore: relicense from BSL-1.1 to dual MIT/Apache-2.0
* fix: correct copyright holder to backnotprop

--- a/apps/opencode-plugin/package.json
+++ b/apps/opencode-plugin/package.json
@@ -3,7 +3,7 @@
   "version": "0.7.0",
   "description": "Plannotator plugin for OpenCode - interactive plan review with visual annotation",
   "author": "backnotprop",
-  "license": "BSL-1.1",
+  "license": "MIT OR Apache-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/backnotprop/plannotator.git",
